# amocrm-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: conf.py  index.rst  leads.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  leads.html  objects.inv  pagination.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  leads.doctree  pagination.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/amocrm/: auth.html  client.html  exceptions.html  manager.html
docs/_build/html/_modules/amocrm/models/: common.html  companies.html  contacts.html  leads.html  pipelines.html  tasks.html
docs/_build/html/_modules/amocrm/resources/: companies.html  contacts.html  leads.html  pipelines.html  tasks.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  leads.rst.txt  pagination.rst.txt
src/amocrm/: __init__.py  auth.py  client.py  codegen.py  exceptions.py  manager.py
src/amocrm/models/: __init__.py  common.py  companies.py  contacts.py  custom_fields.py  leads.py  pipelines.py  tasks.py
src/amocrm/resources/: _utils.py  companies.py  contacts.py  custom_fields.py  leads.py  pipelines.py  tasks.py
tests/: test_auth.py  test_codegen.py  test_companies.py  test_contacts.py  test_custom_dto_integration.py  test_custom_fields_mixin.py  test_custom_fields_resource.py  test_leads.py  test_pipelines.py  test_tasks.py
