[project]
name = "amocrm-sdk"
version = "0.1.0"
description = "Simple Python SDK for AmoCRM API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amocrm"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
