[project.urls]
Homepage = "https://github.com/MikhailMurashov/amocrm-sdk"
Repository = "https://github.com/MikhailMurashov/amocrm-sdk"
Documentation = "https://amocrm-sdk.readthedocs.io"

[project]
name = "amocrm-sdk"
version = "0.2.0"
description = "Simple Python SDK for AmoCRM API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "black",
]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amocrm"]

[tool.ruff]
extend-exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20260107",
]
